# Tessera

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.docs/: development-plan.md  execution-prompt.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
assets/: tessera_explainer.py
docs/: api.md  determinism-and-observability.md  migration-contract.md  non-goals.md  pitch.md  playbook-compiler-recipes.md  project-context-layer.md  quickstart.md  release-spec.md  smoke-test-v0.3rc1.md  smoke-test-v0.4rc1.md  swcr-spec.md  system-design.md  system-overview.md  threat-model-coverage.md  threat-model.md  troubleshooting.md  v0.1-dod-audit.md
docs/adr/: 0001-sqlite-over-alternatives.md  0002-sqlite-vec-over-external-vector-stores.md  0003-per-model-vec-tables.md  0004-seven-facet-identity-model.md  0005-mcp-as-primary-transport.md  0006-ollama-as-default-model-runtime.md  0007-token-lifecycle.md  0008-adapter-framework-scope.md  0009-swcr-opt-in-pending-ablation.md  0010-five-facet-user-context-model.md  0011-swcr-default-on-cross-facet-coherence.md  0012-v0-3-people-and-skills-design.md  0013-rest-surface-alongside-mcp.md  0014-onnx-only-stack.md  0015-graph-backing-for-person-skill-coherence.md  0016-memory-volatility-model.md  0017-agent-profile-facet.md  0018-verification-retrospective-facets.md  0019-compiled-notebook-as-agenticos-playbook.md  0020-automation-registry-storage-only.md  0021-audit-chain-tamper-evidence.md  0022-byo-sync-transport.md  README.md
docs/benchmarks/: README.md
docs/benchmarks/B-EMB-1-async-embed/: README.md  run.py
docs/benchmarks/B-REEMBED-1-embedder-swap/: README.md  run.py
docs/benchmarks/B-RERANK-1-reranker-latency/: README.md  run.py
docs/benchmarks/B-RET-1-graph-backing-experiment/: README.md  run.py
docs/benchmarks/B-RET-1-swcr-ablation/: README.md  run.py
docs/benchmarks/B-RET-2-recall-latency/: README.md  run.py
docs/benchmarks/B-RET-3-assume-identity/: README.md  run.py
docs/benchmarks/B-RET-3-cross-facet-coherence/: README.md  run.py
docs/benchmarks/B-SEC-1-encryption-overhead/: README.md  run.py
docs/benchmarks/B-SYNC-1-snapshot-load/: README.md  run.py
docs/benchmarks/B-WRITE-1-concurrent-capture/: README.md  run.py
docs/dogfood/: compiled-notebook-dogfood.md  playbook-dogfood.md  sync-dogfood.md
docs/user-demo/: README.md  demo-script.md  macos-recording-guide.md  tester-kit.md
packaging/homebrew/: README.md
packaging/homebrew/Formula/: tessera.rb
scripts/: assume_identity_grep.sh  audit_chain_determinism.py  audit_chain_single_writer.sh  check_critical_coverage.py  demo_reset.sh  demo_smoke.sh  facet_vocabulary_grep.sh  no_telemetry_grep.sh
src/tessera/: __init__.py
src/tessera/adapters/: __init__.py  cohere_reranker.py  devices.py  errors.py  fastembed_embedder.py  fastembed_reranker.py  models_registry.py  ollama_embedder.py  openai_embedder.py  protocol.py  registry.py  st_reranker.py
src/tessera/auth/: __init__.py  scopes.py  tokens.py
src/tessera/cli/: __init__.py  __main__.py  _common.py  _http.py  _ui.py  agents_cmd.py  audit_cmd.py  connect_cmd.py  curl_cmd.py  daemon_cmd.py  doctor_cmd.py  dogfood_cmd.py  export_cmd.py  import_cmd.py  init_cmd.py  models.py  people_cmd.py  playbook_cmd.py  skills_cmd.py  sync_cmd.py  tokens_cmd.py  tools_cmd.py  vault.py
src/tessera/connectors/: __init__.py  base.py  chatgpt.py  file_safety.py  json_connector.py  registry.py  toml_connector.py
src/tessera/daemon/: __init__.py  config.py  control.py  dispatch.py  doctor.py  exchange.py  http_mcp.py  rest.py  state.py  stdio_bridge.py  supervisor.py  units.py
src/tessera/dogfood/: __init__.py  ledger.py  render.py  schemas.py
src/tessera/identity/: __init__.py  bundle.py  roles.py
src/tessera/importers/: __init__.py  _common.py  chatgpt.py  claude.py
src/tessera/mcp_surface/: __init__.py  tools.py
src/tessera/migration/: __init__.py  backup.py  runner.py
src/tessera/observability/: __init__.py  bundle.py  events.py  scrub.py
src/tessera/retrieval/: __init__.py  bm25.py  budget.py  dense.py  embed_worker.py  mmr.py  pipeline.py  rerank.py  retry_policy.py  rrf.py  seed.py  swcr.py
src/tessera/sync/: __init__.py  _sigv4.py  config.py  envelope.py  manifest.py  pull.py  push.py  s3.py  (+2 more)
tests/: conftest.py
tests/integration/: test_auth_lifecycle.py  test_cli_audit_verify.py  test_cli_connect_commands.py  test_cli_dogfood.py  test_cli_playbook.py  test_cli_sync.py  test_cli_vault_commands.py  test_daemon_dispatch.py  test_daemon_doctor_vault.py  test_daemon_http_mcp.py  test_daemon_rest.py  test_daemon_supervisor.py  test_export.py  test_identity_bundle.py  test_mcp_tool_surface.py  test_observability_bundle.py  test_ollama_live.py  test_recall_honesty.py  test_retrieval_pipeline.py  test_st_reranker.py  test_sync_round_trip.py  test_sync_s3_round_trip.py  test_vault_lifecycle.py
tests/security/: test_audit_chain.py  test_bundle_scrubber.py  test_exchange_endpoint.py  test_hard_delete_cascade.py  test_migration_resume_rollback.py  test_vault_encryption_rest.py
tests/unit/: test_adapter_protocol.py  test_adapter_registry.py  test_agent_profiles.py  test_audit_log.py  test_auth_scopes.py  test_auth_tokens.py  test_automations.py  test_b_ret_1_dataset.py  test_canonical_json.py  test_capture.py  test_cli_common.py  test_cli_connect.py  test_cli_curl.py  test_cli_daemon_install.py  test_cli_models_stub.py  test_cli_network_cmds.py  test_cli_parser.py  test_cli_people.py  test_cli_skills.py  test_cli_ui.py  test_cli_vault_repair.py  test_cohere_reranker.py  test_compiled.py  test_compiled_staleness.py  test_compiled_targets.py  test_connectors_file_safety.py  test_connectors_merge.py  test_daemon_config.py  test_daemon_control.py  test_daemon_dispatch_defaults.py  test_daemon_doctor.py  test_daemon_stdio_bridge.py  test_daemon_units.py  test_devices.py  test_dogfood_ledger.py  test_dogfood_render.py  test_dogfood_schemas.py  test_embed_worker.py  test_exchange_nonce_store.py  test_facets.py  (+40 more)
(+64 files in other folders)
