[project]
name = "tessera"
version = "0.0.1.dev0"
description = "Substrate-independent identity layer for AI agents. Single-file encrypted SQLite vault served over MCP."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tom Mathews", email = "tommathews2007@gmail.com" },
]
requires-python = ">=3.12,<3.13"
keywords = ["mcp", "agent", "memory", "identity", "sqlite", "local-first"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "mcp>=1.2.0",
    "ollama>=0.4.0",
    "sentence-transformers>=3.3.0",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.8.0",
]

# NOTE: The SQLCipher wrapper (pysqlcipher3 / sqlcipher3-binary) is added in the
# vault-encryption work, not here. sqlcipher3-binary publishes Linux wheels only;
# macOS/Windows require a platform-specific source build (pysqlcipher3 against a
# brewed/vcpkg libsqlcipher). Deferring the pin until the import site exists keeps
# P0 resolvable on all three target platforms.

[project.urls]
Homepage = "https://github.com/Mathews-Tom/Tessera"
Repository = "https://github.com/Mathews-Tom/Tessera"
Issues = "https://github.com/Mathews-Tom/Tessera/issues"

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "TID",
    "RUF",
    "PT",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# Mypy — strict
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src/tessera", "tests"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "sqlite_vec.*",
    "sqlcipher3.*",
    "ollama.*",
    "tiktoken.*",
    "argon2.*",
    "mcp.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that touch SQLite, filesystem, or local Ollama",
    "security: security-focused tests under tests/security",
    "e2e: end-to-end flow tests",
    "slow: tests that take more than a second",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# ----------------------------------------------------------------------------
# Coverage — 80% overall, 90% critical dirs enforced per-directory in CI
# ----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/tessera"]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.coverage.paths]
source = ["src/tessera", "*/site-packages/tessera"]
