[project]
# PyPI name; the CLI binary and Python import path remain `tessera`.
# The short name `tessera` on PyPI is owned by an abandoned Graphite
# dashboard project (last upload 2017-02-03). PEP 541 reclaim is being
# pursued in parallel for a future release; v0.1.0 ships as
# `tessera-context` per `docs/release-spec.md §v0.1 launch`.
name = "tessera-context"
version = "0.0.1.dev0"
description = "Portable context layer for T-shaped AI-native users. Single-file encrypted SQLite vault served over MCP."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Tom Mathews", email = "tommathews2007@gmail.com" },
]
requires-python = ">=3.12,<3.13"
keywords = ["mcp", "agent", "memory", "identity", "sqlite", "local-first"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "mcp>=1.2.0",
    "ollama>=0.4.0",
    "python-ulid>=3.0.0",
    "sentence-transformers>=3.3.0",
    "sqlcipher3>=0.5.4 ; sys_platform != 'linux'",
    "sqlcipher3-binary>=0.5.4 ; sys_platform == 'linux'",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.8.0",
    "tomli-w>=1.2.0",
]

# The SQLCipher pin is split by sys_platform: sqlcipher3-binary ships manylinux
# wheels for Ubuntu CI; sqlcipher3 builds from source on macOS / Windows against
# a system libsqlcipher (brew / vcpkg). The two packages expose the same import
# name, so source code treats them identically.

[project.urls]
Homepage = "https://github.com/Mathews-Tom/Tessera"
Repository = "https://github.com/Mathews-Tom/Tessera"
Issues = "https://github.com/Mathews-Tom/Tessera/issues"

# CLI entrypoint. After `pip install tessera-context` the user can type
# `tessera init`, `tessera daemon start`, etc. directly rather than the
# long-form `python -m tessera.cli ...`. The launchd/systemd units in
# `src/tessera/daemon/units.py` continue to invoke `python -m tessera.cli`
# because they want to pin the Python interpreter explicitly.
[project.scripts]
tessera = "tessera.cli.__main__:main"

[dependency-groups]
dev = [
    "coverage[toml]>=7.6.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "TID",
    "RUF",
    "PT",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ----------------------------------------------------------------------------
# Mypy — strict
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src/tessera", "tests"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "sqlite_vec.*",
    "sqlcipher3.*",
    "ollama.*",
    "tiktoken.*",
    "argon2.*",
    "mcp.*",
]
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--import-mode=importlib",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that touch SQLite, filesystem, or local Ollama",
    "security: security-focused tests under tests/security",
    "e2e: end-to-end flow tests",
    "slow: tests that take more than a second",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# ----------------------------------------------------------------------------
# Coverage — 80% overall, 90% critical dirs enforced per-directory in CI
# ----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src/tessera"]
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.coverage.paths]
source = ["src/tessera", "*/site-packages/tessera"]
